# vhr-cnn-chm

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: dockerhub.yml
notebooks/: Analysis.ipynb  EDA.ipynb  GLiHT_match.ipynb  MODIS_SpotCheck_0.1.4.ipynb  Preprocess.ipynb  RegressionCNNDataGathering.ipynb  ResultsCheckHowland.ipynb  SenegalAssessment-Tiler.ipynb  SenegalAssessment-TilerDemo.ipynb  SenegalAssessment.ipynb  explore_ATL08_ALL.ipynb
notebooks/analysis/: EDA.ipynb
notebooks/applications/: Preprocess.ipynb  RegressionCNNDataGathering.ipynb  RegressionCNNPipeline.ipynb  RegressionCNNPrediction.ipynb
notebooks/exploration/: explore_ATL08_senegal.ipynb
notebooks/validation/: ResultsCheckSenegal.ipynb
projects/chm/configs/experiments/howland/: cnn_howland_v1.yaml
projects/chm/configs/experiments/senegal/: cnn_senegal_v1.2.yaml  cnn_senegal_v1.yaml  cnn_senegal_v2.yaml
projects/chm/configs/experiments/serc/: cnn_serc_glight_128.yaml  cnn_serc_glight_256.yaml  cnn_serc_glight_64.yaml  cnn_serc_glight_v0.yaml  cnn_serc_v1.yaml
projects/chm/configs/experiments/tanana/: cnn_tanana_v1.yaml
projects/chm/configs/howland/: cnn_howland_v1.yaml
projects/chm/configs/senegal/: cnn_senegal_v1.2.yaml  cnn_senegal_v1.yaml
projects/chm/configs/serc/: cnn_serc_v1.yaml
projects/chm/scripts/: chm_pipeline.py  chm_pipeline_vim.py  predict.py  preprocess.py  swath_chm_pipeline.py  train.py
projects/chm/slurm/: predict.sh  slurm_predict_cas.sh
projects/dem/notebooks/: DEMValidation.ipynb
requirements/: Dockerfile
scripts/: create_labels.py  mask_trees_wv.py  stack.py
tests/: match_atl08_wv_files.py  match_atl08_wv_gdb.py  test_config.py
tests/test_data/: chm_test.yaml
vhr_cnn_chm/: __init__.py  config.py  utils.py  vis.py
vhr_cnn_chm/legacy/model/: cnn_config.py  cnn_regression_pipeline.py
vhr_cnn_chm/legacy/model/geoscitools/: atl08lib.py  maplib.py
vhr_cnn_chm/legacy/view/: cnn_cli.py
vhr_cnn_chm/legacy/view/config/demo_100m/: cnn_v2.yaml  cnn_v3.yaml  cnn_v4.yaml  cnn_v5.yaml
vhr_cnn_chm/model/: atl08.py  chm_pipeline.py  cnn_config.py  cnn_model.py  cnn_regression_pipeline.py  config.py  utils.py  vis.py
vhr_cnn_chm/model/geoscitools/: atl08lib.py  maplib.py
vhr_cnn_chm/scripts/: test_bands.py
vhr_cnn_chm/view/: chm_pipeline_cli.py  cnn_cli.py
vhr_cnn_chm/view/config/: cnn_v1.yaml  cnn_v2.yaml
(+3 files in other folders)
